<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".screen.activity.ActivityLogin">

    <ImageView
        android:id="@+id/img_logo"
        android:src="@drawable/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        app:layout_constraintTop_toTopOf="@id/text_tittle"
        app:layout_constraintBottom_toBottomOf="@id/text_tittle2"
        app:layout_constraintRight_toLeftOf="@id/text_tittle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/desc_logo" />

    <TextView
        android:id="@+id/text_tittle"
        style="@style/TextTittleLogin"
        android:text="@string/cash"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="100sp"
        app:layout_constraintLeft_toRightOf="@id/img_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tittle2"
        style="@style/TextTittleLogin"
        android:text="@string/app"
        android:layout_marginTop="-15sp"
        app:layout_constraintLeft_toLeftOf="@id/text_tittle"
        app:layout_constraintRight_toRightOf="@id/text_tittle"
        app:layout_constraintTop_toBottomOf="@id/text_tittle" />

    <TextView
        android:id="@+id/text_subtitulo"
        style="@style/TextLogin"
        android:text="@string/subtitulo"
        android:layout_marginTop="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tittle2" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        style="@style/EditTextLogin"
        android:layout_marginTop="50sp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/custom_email_item"
        app:layout_constraintTop_toBottomOf="@id/text_subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/edit_senha"
        android:hint="@string/senha"
        style="@style/EditTextLogin"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/custom_lock_item"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:background="@drawable/button_background"
        android:text="@string/login"
        style="@style/ButtonLogin"
        android:layout_marginTop="80sp"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_cadastro"
        style="@style/TextLogin"
        android:text="@string/cadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_height="40sp"
        android:layout_width="40sp"
        android:indeterminateTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>